    or
    (LAMBDA (X) (ETYPECASE (INTEGER ...) (SYMBOL ...)) X)
    instead of forgetting all information about X after the E(TYPE)CASE.
  * optimization: inlined functions enclosed in local macro definitions no
    longer save their entire lexical environment, reducing unnecessary
    memory retention.
  * optimization: faster (< integer fixnum) comparisons (ARM64 and x86-64).

changes in sbcl-2.2.3 relative to sbcl-2.2.2:
  * minor incompatible change: SB-THREAD:MUTEX-OWNER may return :THREAD-DEAD
    if the apparent owner either exited nearly instantly after releasing the
    mutex (and is not now the owner), or died and never released it.
  * minor incompatible change: building the system with the simple semi-space
    copying collector is no longer supported.
  * minor incompatible change: support for PPC/Darwin has been removed.
  * platform support:
    ** fix regressions in threads on RISC-V.  (lp#1962598)
    ** threads are now enabled by default on RISC-V.
    ** The generational garbage collector is now supported on MIPS.
  * optimization: fasls containing standard object literals are now smaller
    and load more efficiently.
  * optimization: faster arithmetic (*-+) on word-sized integers when the
    result is not known to fit into a word (ARM64 and x86-64).
  * bug fix: EQness of constants is now always preserved when block compiling.

changes in sbcl-2.2.2 relative to sbcl-2.2.1:
  * platform support:
    ** all architectures now share the coverage mark instrumentation
       implementation, meaning that performance now equals what had been
       implemented only on x86 architectures.
    ** fixed a performance regression on x86-64 from changes in AVX2 register
       handling.  (lp#1960081, reported by Michael Kappert)
    ** fixed a garbage collection bug on ppc64 manifesting in occasional
       corruption on threaded programs.  (lp#1959338, lp#1952973)
    ** micro-optimizations in type tests for (SIGNED-BYTE 64).